# citadel

./: .env  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  README.md  app.tsx  package-lock.json  package-lock.json.orig  package-lock_old.json  package.json  package.json_removed_lines.txt  plan.md  setup.cfg  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci-cd.yml
api/: README.md  pyproject.toml  setup.cfg  test.py
api/citadel/: LICENSE  pyproject.toml
api/citadel/docs/: Makefile  conf.py  example.ipynb  make.bat
api/citadel/src/ley/: __init__.py  ley.py
api/citadel/tests/: test_args_neg.py  test_args_pos.py
api/demo/: 04_01_22-Copy1.ipynb  demo_setup.py  infection_sim.py  run.py  setup.py  visgraph.py  wave.py  wave_setup.py
api/demo/.ipynb_checkpoints/: 04_01_22-Copy1-checkpoint.ipynb
api/runcitadel/: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
api/runcitadel/.github/workflows/: ci-cd.yml
api/runcitadel/docs/: Makefile  conf.py  development.py  example.ipynb  make.bat
api/runcitadel/src/runcitadel/: __init__.py  runcitadel.py
api/runcitadel/tests/: test_connect.py  test_filter_globals.py  test_filter_globals_error.py  test_send_message.py  test_send_message_error.py  test_validate_params_schema.py  test_validate_params_schema_error.py
api/src/visgraph/: __init__.py  visgraph.py
api/tests/: test_with_pytest.py
client/: .env  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.prod  README.md  package-lock.json  package.json  sans.fnt  tsconfig.json  tsconfig.tsbuildinfo
client/.storybook/: preview.js
client/nginx/: nginx.conf
client/src/: devcert.tsx  index.css  index.js  index.jsx  index.tsx  setupProxy.js  types.d.ts  types.js  types.ts
client/storybook-static/: project.json
server/: .eslintrc.json  .gitignore  app.tsx  package-lock.json  package.json  tsconfig.json
server/lib/: cytoscape.d.ts  (+1 more)
shared/: .gitignore  package.json  tsconfig.json
src/: arsocket.tsx  clientsocket.tsx  cytoscape.tsx  sessions.tsx  socket.tsx
utility/: config_server.py  devcert_generate.d.ts  devcert_generate.d.ts.map  devcert_generate.js  devcert_generate.js.map  devcert_generate.ts  tsconfig.json  tsconfig.tsbuildinfo
(+431 files in other folders)
