[metadata]
name = visgraph
version = "0.0.1"
description =
long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
keywords = network visualization, computational modeling
license =
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    websockets
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where=./
