[tool.poetry]
name = "ley"
version = "0.1.0"
description = "A package for communicating with the Citadel backend."
authors = ["Miles van der Lely <milesvanderlely@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.4"
jsonschema = "^4.17.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
